--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
    </p>
 <img class="cat" src="njashnye-kotiki8.jpg" alt="котики">
+<a href="khji5154.html">перейти на googl 2022</a>
 </body>
 </html>
 
